# bare-metal-arm-experiments

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  clean.sh  hello-world.c  run.sh  startup.ld  startup.s
Drivers/Serial/PL011/: Instance.c  Instance.h
apps/: CMakeLists.txt
apps/hello-world/: CMakeLists.txt  hello-world.cpp
apps/hello-world-c/: CMakeLists.txt  hello-world.c
cmake/toolchains/: arm.cmake  gcc-arm-none-eabi.cmake
libs/: CMakeLists.txt
libs/Drivers/Serial/: PL011.c  PL011.h
libs/Drivers/Serial/PL011/: Instance.h
libs/Drivers/Timer/: SP804.h
libs/System/: Entrypoint.c  Entrypoint.h  Interrupts.c  Interrupts.h  Macros.h
libs/common/: CMakeLists.txt
libs/common/Common/: Macros.cpp  Macros.hpp
libs/drivers/: CMakeLists.txt
libs/drivers/Drivers/Serial/: PL011.cpp  PL011.hpp
libs/drivers/Drivers/Timer/: SP804.cpp  SP804.hpp
libs/system/: CMakeLists.txt
libs/system/System/: Entrypoint.cpp  Entrypoint.hpp
libs/system/System/ARM/: Exception.cpp  Exception.hpp
scripts/: debug.sh  dump.sh  run.py  run.sh
targets/common/: CMakeLists.txt  arm-none-eabi.cmake
targets/common/arm/: CMakeLists.txt  ExceptionHandlers.cpp
targets/qemu-versatilepb/: startup.ld  toolchain.cmake
targets/qemu-versatilepb/startup/: CMakeLists.txt  startup.s
